Fixed overflow issue with portfolilo page

--- a/src/App.css
+++ b/src/App.css
@@ -38,49 +38,49 @@ body {
   height: 100vh;
 }
 
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 0.6rem;
   height: 1rem;
 }
 
-body::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background-color: #456;
   border-radius: 5px;
 }
 
 /* Styles for the scrollbar track */
-body::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background-color: #f1f1f1;
 }
 
-body::-webkit-scrollbar-corner {
+*::-webkit-scrollbar-corner {
   background-color: #f1f1f1;
 }
 
 /* Firefox */
-body {
+* {
   scrollbar-width: thin;
 }
 
-body::-moz-scrollbar-thumb {
+*::-moz-scrollbar-thumb {
   background-color: #456;
   border-radius: 5px;
 }
 
-body::-moz-scrollbar-track {
+*::-moz-scrollbar-track {
   background-color: #f1f1f1;
 }
 
-body {
+* {
   scrollbar-width: thin;
 }
 
-body::-ms-scrollbar-thumb {
+*::-ms-scrollbar-thumb {
   background-color: #456;
   border-radius: 5px;
 }
 
-body::-ms-scrollbar-track {
+*::-ms-scrollbar-track {
   background-color: #f1f1f1;
 }
 
@@ -343,15 +343,14 @@ body::-ms-scrollbar-track {
 }
 
 .portfolio{
-  max-width: 900px;
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  padding: 20vh 2rem;
+  padding: 20vh 25%;
+  overflow-y: scroll;
+  height: 100vh;
 }
 
 .portfolio__container{
   display: grid;
+  max-width: 900px;
   place-items: center;
   align-items: center;
   max-height: 600px;
